<resources>
    <string name="app_name">InventoryApp</string>
    <string name="change_image">button click</string>
    <string name="new_product_name_text">Product Name</string>
    <string name="new_product_qty_text">Starting Inventory</string>
    <string name="new_product_price_text">Price</string>
    <string name="new_product_image_text">Image</string>
    <string name="change_image_button_text">Add</string>
    <string name="new_product_vendor_text">Vendor E-mail</string>
    <string name="add_new_product_botton_text">Add New Product!</string>
    <string name="no_products_in_list">No Products, please enter one by clicking the add button below.</string>
    <string name="take_image_button_text">Take</string>
    <string name="delete_item_menu_text">Delete</string>
    <string name="edit_item_menu_text">Edit</string>
    <string name="detail_price_text">Price: $</string>
    <string name="detail_qty_text">QTY: </string>
    <string name="order_more_button">Order More</string>
    <string name="email_subject_start">New order for</string>
    <string name="email_subject_middle">more of:</string>
    <string name="email_subject">New Order</string>
    <string name="qty_text_item">QTY:</string>
    <string name="adjust_qty_start">1</string>
    <string name="recieve_btn_text">Receive</string>
    <string name="receive_btn_text">Receive</string>
    <string name="sell_btn_text">Sell</string>
    <string name="null_item_toast_msg">Please Fill in all fields</string>
    <string name="inventory_text_edit_screen">Current QOH</string>
    <string name="edit_button_text">Edit Product!</string>
    <string name="item_sell_btn">[Sell]</string>
    <string name="allow_media_text">Please allow acess to media to see image.</string>
</resources>
