<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/prod_detail_name"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:layout_marginBottom="5dp"
        android:textSize="25sp"
        android:textAlignment="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/prod_detail_img"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/detail_item_qty" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/detail_item_qty"
            android:id="@+id/detail_item_price"
            android:textColor="@android:color/holo_green_dark"
            android:text="hi"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="-"
            android:id="@+id/subtract_qty_btn"/>
        <EditText
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/prod_detail_adjust_qty_txt"
            android:text="@string/adjust_qty_start"/>
        <Button
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="+"
            android:id="@+id/add_qty_btn"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/receive_btn_text"
            android:id="@+id/recieve_qty_btn"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/sell_btn_text"
            android:id="@+id/sell_qty_btn"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_more_button"
        android:id="@+id/order_more_btn"/>

</LinearLayout>